# juliagnaranjo

./: .env.example  Dockerfile  Hola.txt  README.md  index.php  package.json  pyproject.toml  work.php
.github/workflows/: _deploy_pro.yaml  _docker-build-and-push.yaml  production.yaml
conexiones/: conexion.php
css/: responsive.css  style.css
js/: script.js
sections/: meta.php
src/: app.py  wsgi.py
src/context/domain/: base_item.py  experience.py  main.py  project.py  teach.py
src/context/infrastructure/: notion_client.py
src/context/services/: experience_service.py  main_service.py  project_service.py  teach_service.py
src/static/css/: bootstrap.css  iphone.css  responsive.css  responsive.min.css  style.css  style.min.css
src/static/css/old/: responsive_v01.css  style_v01.css  style_v02.css
src/static/data/: main.json  projects.json  teach.json  work.json
src/static/img/landing/: mampara.psd
src/static/js/: script.js
src/templates/: base.html  experience.html  home.html  index.html  projects.html  template.html  work.html
src/templates/sections/: header.html  partials.html
www/: .gitignore  a.php  index.php  private.php  projects.php  work.php
www/[old]/: index_v01.php  old.php
www/conexiones/: classes.php
www/css/: responsive.css  style.css
www/sections/: analyticstracking.php  experience.php  hola.php  meta.php
